Fixed text overflow issue in popovers

--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -140,3 +140,8 @@ Studeo colors and buttons
 	border-color: #2a9498;
 	color: white;
 }
+
+/** Popovers */
+.popover {
+    max-width: none;
+}
